retry urlfetch to nofify.io, recovering from timeouts

--- a/main.html
+++ b/main.html
@@ -72,7 +72,7 @@
 
 {% else %}
 <div class="intro">
-<h2>What&#8217;s this?</h2>
+<h2>What&#8217;s this about?</h2>
 <p>Commitify uses your <a href="http://notify.io">notify.io</a> account to send you real-time notifications of Github commits.</p>
 <p>Here&#8217;s what you do:</p>
 <ol>
