Showing off Commitify

--- a/main.html
+++ b/main.html
@@ -29,7 +29,7 @@
     </p>
     <h4>Private repositories</h4>
     <p>If your repository is private, you&#8217;ll want to add a private key, which is passed as a parameter with your github post-receive hook.</p>
-    <p>If you already have a key for your private repo, enter it here. Or, click to get a pre-generated key.</p>
+    <p>You can use any arbitrary string. If you already have a key for your private repo, enter it here. Or, click to get a pre-generated key.</p>
     </p>
     <p>
       <label>Private key:</label>
